<resources>
    <string name="app_name">Targets</string>
    <string name="title_main">Main</string>
    <string name="title_personal">Personal</string>
    <string name="title_work">Work</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_preferences">Preferences</string>
    <string name="add_page_personal">+ Add page (Personal)</string>
    <string name="action_button_page">Actions with page</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="change_title">Rename</string>
    <string name="category">Category...</string>
    <string name="delete">Delete</string>
    <string name="new_page">New page</string>
    <string name="delete_message">Are you sure? All cards on this page and all their instances will be deleted.</string>
    <string name="categorize">Add to category</string>
    <string name="category_title">Category title (not required)</string>
    <string name="selected"> selected</string>
    <string name="card_delete_message">Are you sure? This action can not be undone.</string>
    <string name="no">No</string>
    <string name="add_page_work">+ Add page (Work)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_to">Move to</string>
    <string name="icon">Icon</string>
    <string name="add_point">Add point…</string>
    <string name="number_of_columns_display_mode">Number of columns</string>
    <string name="number_of_columns_edit_mode">Number of columns (edit mode)</string>
    <string name="no_pages">Looks like that there\'s no pages. Create one!</string>
    <string name="no_cards">Add some cards!</string>
    <string name="quick_edit_mode">Quick Edit Mode</string>
    <string name="edit_mode"> (Edit)</string>
    <string name="enable_cards_max_height">Enable cards\' max height</string>
    <string name="change_color">Change color</string>
    <string name="share">Share</string>
    <string name="move_copy">Move/Copy</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="make_instance">Make Instance</string>
    <string name="set_time">Set Time</string>
    <string name="question_text_won_t_be_editable">Question text won\'t be editable!</string>

    <string-array name="card_types">
        <item>Note</item>
        <item>List</item>
        <item>Deadline</item>
        <item>Question</item>
    </string-array>
</resources>
