<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/colorPrimary"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_personal" />

    <item
        android:id="@+id/navigation_work"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_work" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/title_more" />

</menu>
