<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/movecopy_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@id/radio_move"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move" />

        <RadioButton
            android:id="@+id/radio_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy" />

        <RadioButton
            android:id="@+id/radio_instance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/make_instance" />

    </RadioGroup>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/page_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_personal" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_work" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/destination_pages"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>